# hardshap

./: .gitignore  HardShaP.doc  README.txt
NOTES/: SCAP.lyx  SCAP.tex  SE2d.tex
NOTES/SE2d/fig/xfig/.svn/: entries
NOTES/SE2d/fig/xfig/.svn/text-base/: ellipse.fig.svn-base
NOTES/fig/xfig/: superellipse.fig
lib1.0/: Makefile  Makefile.in  config.status  configure  configure.ac  libtool
lib1.0/include/: Circle.h  Ellipse.h  LLcells2d.h  Rectangle.h  SEllipse.h  Segment.h  SphericalCap.h  se2d.h  se2d_overlap.h  vector2d.h  wrap_plplot.h
lib1.0/lib/: Circle.cpp  Ellipse.cpp  Makefile  Makefile.am  Makefile.in  Rectangle.cpp  SEllipse.cpp  SphericalCap.cpp  gaussdev.c  se2d_overlap.cpp  wrap_plplot.cpp
lib1.0/lib/.deps/: Ellipse.Po  Rectangle.Po  SEllipse.Po  Segment.Po  SphericalCap.Po  se2d_overlap.Po  se2d_overlap.Tpo  wrap_plplot.Po
lib1.0/src/: EllipseMCwithPlPlot.cpp  Makefile  Makefile.am  Makefile.in  SimBox2d.cpp  SimBox2d.h  SimPar.h  test_llcells.cpp  test_overlap.cpp  test_rectangle.cpp  test_vec2d.cpp
lib1.0/src/.deps/: EllipseMCwithPlPlot.Po  MCstep2d.Po  SimBox2d.Po  SimPar.Po  test_llcells.Po  test_overlap.Po  test_rectangle.Po  test_scap.Po  test_se2d.Po  test_segment.Po  test_vec2d.Po  test_wrap_plplot.Po
lib1.1/: AUTHORS  Makefile  README  config.h  config.status  configure  libtool
lib1.1/autom4te.cache/: output.0  requests  traces.0  traces.1
lib1.1/example/: Histogram.cpp  Histogram.h  MC.cpp  MCstep2d.cpp  Makefile  SimBox2d.cpp  SimBox2d.h  SimPar.cpp  SimPar.h  StartMC.cpp  plview.cpp  run0000.cnf  run0000.his  start0000.cnf
lib1.1/include/: Ellipse.h  SEllipse.h  gaussdev.h  gsl_fmin.h  se2d.h  vector2d.h  vector2dOperators.h  vector2dPETE.h
lib1.1/lib/: Makefile  Makefile.am~  wrap_plplot.cpp
lib1.1/lib/.deps/: Circle.Po  Ellipse.Po  Rectangle.Po  SEllipse.Po  Segment.Po  SphericalCap.Po  gaussdev.Po  se2d_overlap.Po  wrap_plplot.Po
lib1.1/src/: EllipseMCwithPlPlot.cpp  MCstep2d.cpp  Makefile  SimBox2d.cpp  test_overlap.cpp  test_scap.cpp  test_segment.cpp  test_wrap_plplot.cpp
lib1.1/src/.deps/: EllipseMCwithPlPlot.Po  MCstep2d.Po  SimBox2d.Po  SimPar.Po  test_llcells.Po  test_overlap.Po  test_rectangle.Po  test_scap.Po  test_se2d.Po  test_segment.Po  test_vec2d.Po  test_wrap_plplot.Po
old/lib0.9/: AUTHORS  Makefile  Makefile.am  Makefile.in  README  clean_all.sh  config.h  config.h.in  config.status  configure  configure.ac  copyright.txt  make_all.sh
old/lib0.9/LLcells/: LLcells2d.h  LLcells2d.h~  Makefile  test.cpp
old/lib0.9/MC-SE2d/: EllipseMCwithPlPlot.cpp  EllipsesEventCB.cpp  EllipsesMCwithInventor.cpp  EllipsesShow.cpp  Makefile  Makefile.org  SimBox2d.cpp  SimPar.cpp  SimPar.h  ll_subs2d.cpp  test_pl.cpp
old/lib0.9/NOTES/: SE2d.lyx
old/lib0.9/SE2d/: Circle.cpp  Circle.h  Ellipse.cpp  Ellipse.h  Makefile.in  Rectangle.cpp  Rectangle.h  SEllipse.cpp  SEllipse.h  Segment.cpp  Segment.h  SphericalCap.cpp  SphericalCap.h  se2d.h  se2d_overlap.cpp  se2d_overlap.h  test.cpp
old/lib0.9/Test/: Makefile.in  Makefile.org  gsl_fmin.cpp  test_gsl_conjgrad.cpp  test_gsl_simplex.cpp  test_llcells.cpp  test_overlap.cpp  test_rectangle.cpp  test_scap.cpp  test_se2d.cpp  test_segment.cpp  test_vec2d.cpp  test_wrap_pl.cpp
old/lib0.9/VecNd/: IVec2d.cpp  IVec2d.h  IVec3d.cpp  IVec3d.h  Makefile  Vec2d.cpp  Vec2d.h  Vec3d.cpp  Vec3d.h  VecNd.h  gaussdev.c  gaussdev.h  test.cpp  test_VecNd.cpp
old/lib0.9/Wrap_plplot/: Makefile.org  test_llcells.cpp  wrap_pl.cpp  wrap_pl.h
old/xxx/: Makefile.in  config.h.in
old/xxx/autom4te.cache/: output.1  requests
old/xxx/include/: Circle.h  LLcells2d.h  Rectangle.h  SEllipse.h  SphericalCap.h  se2d_overlap.h  vector2d.h  wrap_plplot.h
old/xxx/lib/: Circle.cpp  Ellipse.cpp  Makefile.am  Makefile.in  Rectangle.cpp  SEllipse.cpp  Segment.cpp  SphericalCap.cpp  se2d_overlap.cpp
old/xxx/src/: MCstep2d.h  Makefile.in  test_llcells.cpp  test_rectangle.cpp  test_vec2d.cpp
website/: index.html
